--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ h6 {
 
 h1 {
   font-size: 40px;
-  color: #f5a623;
+  color: #555;
   line-height: 48px;
   display: inline;
 }
@@ -92,10 +92,21 @@ a {
   display: block;
 }
 
+#topContacts {
+    width: 100%;
+}
+
+.flex-item {
+    margin-right: 30px;
+    list-style: none;
+}
+.flex-item:last-child {
+  margin-right: 0;
+}
+
 .welcome-message {
   font-style: italic;
   font-size: 18px;
-  color: #f3f3f3;
   line-height: 28px;
 }
 
@@ -103,13 +114,30 @@ a {
   color: #f5ae23;
   display: none;
 }
+.navbar-toggle .icon-bar {
+    background-color: #555;
+}
+.navbar-toggle {
+    background-color: #ddd;
+}
+.navbar-toggle span {
+  padding: 2px;
+}
 
 .orange {
   background-color: #f5ae23;
 }
+.orange-text:hover {
+  color: orange;
+  cursor: pointer;
+}
+
+#workExperience {
+    margin-bottom: 10px;
+}
 
 .orange-text {
-  color: #f5ae23;
+  color: #777;
 }
 
 .white-text {
@@ -127,11 +155,25 @@ a {
   background-color: #4a4a4a;
 }
 
-/* TODO: Replace with image later */
-#header {
-  background-color: #484848;
+#projects {
+  background-color: #ddd;
+  padding: 10px 0;
 }
 
+
+/* TODO: Replace with image later */
+#header {
+  background-image:url(../images/Green-Abstract-Background.jpg);
+
+  color: #fff;
+  background-attachment: scroll;
+  background-position: center center;
+  background-repeat: none;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+}
 .flex-box {
   display: -webkit-flex;
   display: flex;
@@ -186,7 +228,7 @@ span {
 
 @media only screen and (max-width: 750px) {
   #lets-connect {
-    margin-top: 10%;
+    margin-top: 6%;
   }
   .biopic {
     width: 150px;
@@ -205,7 +247,11 @@ span {
 #mapDiv {
   height: 400px;
   width: 100%;
-  padding-bottom: 5%;
+  padding-bottom: 10%;
+  background-color: #ddd;
+}
+header img {
+  border-radius: 50%;
 }
 
 @media only screen and (min-width: 750px) {
@@ -213,4 +259,15 @@ span {
   .biopic {
     display: block;
   }
+}
+@media only screen and (max-width: 768px) {
+  .navbar-nav>li {
+    width: 100%;
+    margin-bottom: 5px;
+}
+#projects img {
+  width: 100%;
+}
+
+
 }
