--- a/css/style.css
+++ b/css/style.css
@@ -157,7 +157,7 @@ a {
 
 #projects {
   background-color: #ddd;
-  padding: 10px 0;
+  padding: 10px 19px;
 }
 
 
@@ -244,12 +244,17 @@ span {
   margin: 0 5%;
 }
 
+#skills {
+    display: block;
+}
+
 #mapDiv {
   height: 400px;
   width: 100%;
   padding-bottom: 10%;
   background-color: #ddd;
 }
+
 header img {
   border-radius: 50%;
 }
@@ -269,5 +274,8 @@ header img {
   width: 100%;
 }
 
+.flex-item {
+    display: inline;
+}
 
 }
